--- a/app/Makefile
+++ b/app/Makefile
@@ -1,6 +1,7 @@
 rwildcard=$(foreach d,$(wildcard $(1:=/*)),$(call rwildcard,$d,$2) $(filter $(subst *,%,$2),$d))
 CC := g++
 CFLAGS := -Wall -Wextra -pedantic -std=c++1z -O0
+EXT_CFLAGS :=
 INPUT := "Hello, world!"
 LAZYK_CODE := "(SKK)I"
 LAZYK := -D INPUT='$(INPUT)' -D INPUT_LEN=$(shell echo -n $(INPUT) | wc -m) \
@@ -14,7 +15,7 @@ TESTS := $(patsubst %.cpp,%.bin,$(SRCS))
 all: $(BINS) $(TESTS)
 
 %: %.cpp
-	@$(CC) $(CFLAGS) $(LAZYK) $(INCLUDES) -o $@ $<
+	@$(CC) $(CFLAGS) $(EXT_CFLAGS) $(LAZYK) $(INCLUDES) -o $@ $<
 
 %.bin: %
 	@./$<
